<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    android:orientation="vertical"
    tools:context=".LoginPage">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="30dp"
        android:textColor="@color/PrimaryFontColor"
        android:gravity="center"
        android:fontFamily="@font/metropolis_extra_bold"
        android:text="Login"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/SecondaryFontColor"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:fontFamily="@font/metropolis_medium"
        android:text="Add your details to login"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/metropolis_medium"
            android:hint="Your Email"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:fontFamily="@font/metropolis_medium"
            android:hint="Password"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgotPassword"
        android:text="Forgot Password?"
        android:textColor="@color/MainColor"
        android:fontFamily="@font/metropolis_medium"
        android:textSize="16sp"
        android:layout_gravity="right"
        android:layout_marginTop="12dp"/>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17dp"
        android:background="@drawable/round_button"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/metropolis_semi_bold"
        android:text="Login"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/metropolis_medium"
            android:text="Don't have an Account?"/>

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/MainColor"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/metropolis_bold"
            android:text="Sign Up"/>
    </LinearLayout>

</LinearLayout>