...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/metropolis_medium"
            android:hint="Your Email"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/resetButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17dp"
        android:background="@drawable/round_button"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/metropolis_semi_bold"
...
